--- a/src/helloworld/react.html
+++ b/src/helloworld/react.html
@@ -13,9 +13,10 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   <script type="text/babel">
-    ReactDOM
-    .createRoot(document.getElementById('root'))
-    .render(<h1>Hello, world!</h1>);
+    const App = () => {
+      return (<h1>Hello, world!</h1>)
+    }
+    ReactDOM.createRoot(document.getElementById('root')).render(App())
   </script>
 </body>
 </html>
