--- a/src/helloworld/vue.html
+++ b/src/helloworld/vue.html
@@ -12,7 +12,7 @@
   <script src="https://unpkg.com/vue@next"></script>
   <script>
     const App = {
-      template: `<h1>Hello, world!</h1>`
+      template: '<h1>Hello, world!</h1>',
     }
 
     Vue.createApp(App).mount('#root')
